--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>I Love Diletta</title>
-  <link rel="stylesheet" href="dilettastyle.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
